argo-applications/apps/webserver/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webserver1
  labels:
    mesh: gumonet
    istio-injection: enabled
