argo-applications/apps/webserver/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver1
  namespace: webserver1
  labels:
    app: webserver1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver1
  template:
    metadata:
      labels:
        app: webserver1
      annotations:
        proxy.istio.io/config: |
          proxyMetadata:
              ISTIO_META_DNS_CAPTURE: "true"
              ISTIO_META_DNS_AUTO_ALLOCATE: "true"
    spec:
      serviceAccountName: webserver1-service-account
      containers:
        - name: webserver1
          image: public.ecr.aws/nginx/nginx:stable-perl
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
