argo-applications/apps/webserver/base/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver1
spec:
  hosts:
    - api.webserver1.svc.cluster.local
  http:
    - route:
        - destination:
            host: api.webserver1.svc.cluster.local
            subset: v1
